--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -110,7 +110,7 @@ These changes are expected to have profound effects on forest biodiversity and e
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and Co2 which influences leaf temperature and metabolism along the gradient, and with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
 
 The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions [@senfCanopyMortalityHas2018a].
-Increasing temperature has profound impacts on canopy cover, such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts, causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to increased sensitivity of overstory to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020].Larger trees suffer hydraulic stress during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to increase [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continuOUS evapotranspiration, thereby buffering understory microclimates [REF].  
+Increasing temperature has profound impacts on canopy cover, such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts, causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to increased sensitivity of overstory to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020].Larger trees suffer hydraulic stress during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to increase [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continuous evapotranspiration, thereby buffering understory microclimates [REF].  
 
 While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020]. Understories experience a distinct set of pressures as microclimatic warming combines with conditions of limited light and related foliar traits, inter-species resource competition, and herbivory [@niinemetsResponsesForestTrees2010a; @bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and performance, even around 1 degree of warming can lead to changes in plant species composition and growth [@bertrandChangesPlantCommunity2011; @bertrandCommentForestMicroclimate2020]. Plant communities in forest microclimates are already undergoing thermophilization [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. In addition, understory growth phenology is sensitive to warming year round, and especially in spring [Zohnner_Renner 2019]. 
 
@@ -257,7 +257,7 @@ Additionally, shade leaves in the understory can be broken into three categories
 
 **Inter-species vertical gradient leaf trait variation**
 
-Leaf traits (functional and physiological) co-vary with their environment to maintain optimum metabolic and temperature under various circumstances [@michaletzEnergeticCarbonEconomic2016].
+Leaf traits (functional and physiological) co-vary with their environment to maintain optimum temperature for metabolic processes under various environmental circumstances [@michaletzEnergeticCarbonEconomic2016].
 Taller trees in dense forests tend to be exposed to greater irradiance but maintain shaded leaves in canopy interior and lower canopy compared to shorter understory trees that are shaded by overstory. As a result, the sun and shade leaf trait dichotomy has been established across species by various studies where typical sun leaves are often smaller in size and width, thicker, hairier, with thicker cuticle and greater lobation than shade leaves
 [Rozendaal et al. 2006, Mathur et al. 2018, more REFS]. 
 
@@ -311,13 +311,13 @@ Max transpiration rate - increases with canopy height (Kenzo et al. 2015).
 -	Curtis et. al, 2018 – higher in more exposed leaves (heat up slower, cool slower)
 -	Michaeletz has used this in theoretical calculations (Michaeletz et al. 2016 and 2015?
 
-Thermal time constant, a leaf trait, quantifies heat flux in a leaf through incorporating heat stored versus heat exchanged with the environment, with relation to time. It comprises of several underlying traits -- leaf dry matter content, leaf width, water mass, specific heat capacity, leaf geometery, two sided surface area and stomatal conductance [@michaletzEnergeticCarbonEconomic2016]. Typically, larger leaves with greater leaf width experience longer leaf cooling time and thus increased thermal time constant compared to leaves with smaller leaf width. Dissections in leaves such as lobes decreases leaf with and thus thermal time constant [@leighInfluenceLeafSize2017]. Additionally, leaf with a smaller time constant experiences variable leaf temperatures in relation to the environment and exhibits instantaneous carbon assimilation rate and stable photosynthesis enabled by greater LMA [@michaletzEnergeticCarbonEconomic2016] Guessing, sun exposed leaves have lower thermal time constant than shaded?      
+Thermal time constant, a leaf trait, quantifies heat flux in a leaf through incorporating heat stored versus heat exchanged with the environment, with relation to time. It comprises of several underlying traits -- leaf dry matter content, leaf width, water mass, specific heat capacity, leaf geometery, two sided surface area and stomatal conductance [@michaletzEnergeticCarbonEconomic2016]. Typically, larger leaves with greater leaf width experience longer leaf cooling time and thus increased thermal time constant compared to leaves with smaller leaf width. Dissections in leaves such as lobes decreases leaf width and thus thermal time constant [@leighInfluenceLeafSize2017]. Additionally, leaf with a smaller time constant experiences variable leaf temperatures in relation to the environment and exhibits instantaneous carbon assimilation rate and stable photosynthesis enabled by greater LMA [@michaletzEnergeticCarbonEconomic2016] Guessing, sun exposed leaves have lower thermal time constant than shaded?      
 [I have Michaletz's code to calculate the thermal time constant, so if there are data, or general tendencies for changes in leaf area, LMA, leaf width and leaf dry matter content we can determine how these trends would translate into changes in thermal time constant. 
 In practice, an important driver seems to be leaf water content per unit area (I think Lawren might have mentioned this as well in our meeting), so if we can conclude that that is something that scales with the vertical gradient, then we can make an informed guess about how the thermal time constant will change--Martijn Slot]
 
 *Carotenoids/Xanthophyll cycle pigments* 
 
-High light stimulates the need for photoprotection in leaves in order to protect internal photosystem 2 from photoinhibition through D1 protein replacement. Thus leaves exposed to greater irradiance have greater pools of xanthophyll pigments express on a mass or area basis--photoprotective pigments comprising of violaxanthin, antheraxanthin and zeaxanthin [$VAZ$] that convert excess light into heat energy dissipation through non photochemical quenching of excitation energy, enable acclimation to high temperature [Mathur et al. 2018]. These are found to be proportional to within-canopy light gradient at an inter- and intra-species level. Therefore, lower in shaded leaves and greater in sun leaves, as observed among temperate tree species [Niinemets et al. 1998]. In neotropical forest, foliage exposed to higher irradiance in the canopy showed greater b-carotene and vioxanthin-cycle pool on an area or chl basis compared to low light leaves that showed greater mass based chlorophyll and lutein and neoxanthin carotenoids [Mastubara et al. 2009]
+High light stimulates the need for photoprotection in leaves in order to protect internal photosystem 2 from photoinhibition through D1 protein replacement. Thus leaves exposed to greater irradiance have greater pools of xanthophyll pigments expressed on a mass or area basis--photoprotective pigments comprising of violaxanthin, antheraxanthin and zeaxanthin [$VAZ$] that convert excess light into heat energy dissipation through non photochemical quenching of excitation energy, enable acclimation to high temperature [Mathur et al. 2018]. These are found to be proportional to within-canopy light gradient at an inter- and intra-species level. Therefore, $VAZ$ is lower in shaded leaves and greater in sun leaves, as observed among temperate tree species [Niinemets et al. 1998]. In neotropical forest, foliage exposed to higher irradiance in the canopy showed greater b-carotene and vioxanthin-cycle pool on an area or chl basis compared to low light leaves that showed greater mass based chlorophyll, lutein and neoxanthin carotenoids [Mastubara et al. 2009]
   
 -	antioxidant scavenging function- protect against cellular damage
 - Koniger et. al. 1995, and  Matsubara et al. 2009
@@ -333,15 +333,11 @@ High light stimulates the need for photoprotection in leaves in order to protect
 ## Leaf temperature and hydraulics
 
 **Many of the biophysical and trait variable reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
-$T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019] (Fig. 3).
-- As light availability typically increases with tree height, leaf temperature which is largely a function of radiation input, does as well [@michaletzPlantThermoregulationEnergetics2015]. Direct sunlight in upper canopy leaves increases leaf temperature, [sometimes 1-7C above ambient air temperature, making upper canopy leaves susceptible to heat stress] more than scattered light in lower shaded leaves [@mauTemperateTropicalForest2018a]
-While small leaves remain within a few degrees of $T_{air}$, regardless of stomatal conductance, wider leaves can have temperatures deviating more from air temperature.[@fauset_differences_2018]
-Large leaves can be significantly cooler than $T_{air}$ under low radiation with stomata open, and significantly hotter under high radiation with stomata closed.  
-Leaves with open stomata and high radiation loads maintain $T_{leaf}$ similar to $T_{air}$, with coolest leaves at intermediate sizes (~10mm).
-Shaded understory leaves should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance.
-However, counteracting this, lower wind speed in understory would reduce latent heat loss.
-Thus, under hot conditions, canopy leaves exposed to higher wind speeds would be most effective at cooling when sufficient water is available to maintain high stomatal conductance; however, their $T_{leaf}$ can be highly elevated above $T_{air}$ when stomatal conductance is limiting.
-- increase in air temperature, increases VPD, decrease in stomatal conductance during midday leading to decrease in CO2 in leaf = increase in leaf temperature in upper canopy. [@fauset_differences_2018]
+$T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. 3) and is largely a function of radiation input versus heat lost to the environment, and typically increases [with tree height] as light availability increases [@michaletzPlantThermoregulationEnergetics2015]. In tropical and temperate forests, greater light input in exposed upper canopy leaves has been observed to increase leaf temperatures [sometimes 1-7C above ambient air temperature, making upper canopy leaves susceptible to heat stress] more than scattered light in lower shaded leaves [@mauTemperateTropicalForest2018a]
+
+In addition, leaf size impacts leaf temperature. While small leaves remain within a few degrees of $T_{air}$, regardless of stomatal conductance, wider leaves can have temperatures deviating more from air temperature [@fauset_differences_2018]. Large leaves (with greater leaf width) can be significantly cooler than $T_{air}$ under low radiation with stomata open [@leighInfluenceLeafSize2017], and significantly hotter under high radiation with stomata closed.  
+
+Leaves with open stomata and high radiation loads maintain $T_{leaf}$ similar to $T_{air}$, with coolest leaves at intermediate sizes (~10mm). Shaded understory leaves should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance. However, counteracting this, lower wind speed in understory would reduce latent heat loss. Thus, under hot conditions, canopy leaves exposed to higher wind speeds would be most effective at cooling when sufficient water is available to maintain high stomatal conductance. However, increase in air temperature typically also increases VPD, decrease in stomatal conductance during midday leading to a decrease in leaf CO2 and consequentially increasing leaf temperature in upper canopy [@fauset_differences_2018]. Thus, their $T_{leaf}$ can be highly elevated above $T_{air}$ when stomatal conductance is limiting.
 
 ![**Figure 3. Leaf temperature in response to (a) XXX, (b) XXX (key trait or environmental variables).** Examples to be produced based on energy balance model using the tealeaves R package of @muir_tealeaves_2019: https://github.com/EcoClimLab/vertical-thermal-review/issues/6. Current placeholder shows figures from Campbell&Norman.](leaf_energy_balance/C&N_figures.png)
 
