--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -107,7 +107,7 @@ These changes are expected to have profound effects on forest biodiversity and e
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davis_microclimatic_2019].**
 
-Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and Co2 which influences leaf temperature and metabolism along the gradient, and with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
+Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and Co2 which influences leaf traits, thermoregulation and metabolism along the gradient, and with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
 
 The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions [@senfCanopyMortalityHas2018a].
 Increasing temperature has profound impacts on canopy cover, such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts, causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to increased sensitivity of overstory to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020].Larger trees suffer hydraulic stress during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to increase [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continuous evapotranspiration, thereby buffering understory microclimates [REF].  
@@ -116,7 +116,7 @@ While forest microclimates are insulated from macroclimatic extremes, they are s
 
 Microclimate warming has implications for forest regeneration [@vonarxSpatiotemporalEffectsForest2012a]. Temperature driven photosynthesis limitation is reducing tree growth rates, accompanying a global trend towards disturbed forests with younger trees [@mcdowellPervasiveShiftsForest2020]. Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
 
-While there is evidence for temperature driven shifts in forest dynamics, leaf-level metabolic and performance changes influenced by biophysical conditions and warming in overstory and understory is still unclear. Thus, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy. This will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions with additional feedbacks to forest structure and microclimates.
+While there is evidence for temperature driven shifts in forest dynamics, leaf-level metabolic and performance changes influenced by biophysical conditions and warming in overstory and understory is still unclear. Thus, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy. This will provide a pathway for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions with additional feedbacks to forest structure and microclimates.
 
 
 (@niinemetsWithincanopyVariationRate2004a highlights how biophysical and photosynthetic gradient varies along the vertical canopy profile, however our current knowledge of this topic is lacking.)
@@ -311,7 +311,7 @@ Max transpiration rate - increases with canopy height (Kenzo et al. 2015).
 -	Curtis et. al, 2018 – higher in more exposed leaves (heat up slower, cool slower)
 -	Michaeletz has used this in theoretical calculations (Michaeletz et al. 2016 and 2015?
 
-Thermal time constant, a leaf trait, quantifies heat flux in a leaf through incorporating heat stored versus heat exchanged with the environment, with relation to time. It comprises of several underlying traits -- leaf dry matter content, leaf width, water mass, specific heat capacity, leaf geometery, two sided surface area and stomatal conductance [@michaletzEnergeticCarbonEconomic2016]. Typically, larger leaves with greater leaf width experience longer leaf cooling time and thus increased thermal time constant compared to leaves with smaller leaf width. Dissections in leaves such as lobes decreases leaf width and thus thermal time constant [@leighInfluenceLeafSize2017]. Additionally, leaf with a smaller time constant experiences variable leaf temperatures in relation to the environment and exhibits instantaneous carbon assimilation rate and stable photosynthesis enabled by greater LMA [@michaletzEnergeticCarbonEconomic2016] Guessing, sun exposed leaves have lower thermal time constant than shaded?      
+Thermal time constant, a leaf trait, quantifies heat flux in a leaf through incorporating heat stored versus heat exchanged with the environment, with relation to time. It comprises of several underlying traits -- leaf area, LMA, leaf width, leaf dry matter content and stomatal conductance [@michaletzEnergeticCarbonEconomic2016]. Typically, larger leaves with greater leaf width experience longer leaf cooling time and thus increased thermal time constant compared to leaves with smaller leaf width. Dissections in leaves such as lobes decreases leaf width and thus thermal time constant [@leighInfluenceLeafSize2017]. Additionally, leaf with a smaller time constant experiences variable leaf temperatures in relation to the environment and exhibits instantaneous carbon assimilation rate and stable photosynthesis enabled by greater LMA [@michaletzEnergeticCarbonEconomic2016] Guessing, sun exposed leaves have lower thermal time constant than shaded?      
 [I have Michaletz's code to calculate the thermal time constant, so if there are data, or general tendencies for changes in leaf area, LMA, leaf width and leaf dry matter content we can determine how these trends would translate into changes in thermal time constant. 
 In practice, an important driver seems to be leaf water content per unit area (I think Lawren might have mentioned this as well in our meeting), so if we can conclude that that is something that scales with the vertical gradient, then we can make an informed guess about how the thermal time constant will change--Martijn Slot]
 
@@ -333,7 +333,9 @@ High light stimulates the need for photoprotection in leaves in order to protect
 ## Leaf temperature and hydraulics
 
 **Many of the biophysical and trait variable reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
-$T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. 3) and is largely a function of radiation input versus heat lost to the environment, and typically increases [with tree height] as light availability increases [@michaletzPlantThermoregulationEnergetics2015]. In tropical and temperate forests, greater light input in exposed upper canopy leaves has been observed to increase leaf temperatures [sometimes 1-7C above ambient air temperature, making upper canopy leaves susceptible to heat stress] more than scattered light in lower shaded leaves [@mauTemperateTropicalForest2018a]
+$T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. 3).
+Leaf traits are regulated to varying biophysical environment in order to maintain metabolic optima so that the amount of carbon assimilated by a leaf throughout its life span is greater than the total carbon invested in the leaf [@michaletzPlantThermoregulationEnergetics2015] 
+$T_{leaf}$  is largely a function of radiation input versus heat lost to the environment, and typically increases [with tree height] as light availability increases [@michaletzPlantThermoregulationEnergetics2015]. 
 
 In addition, leaf size impacts leaf temperature. While small leaves remain within a few degrees of $T_{air}$, regardless of stomatal conductance, wider leaves can have temperatures deviating more from air temperature [@fauset_differences_2018]. Large leaves (with greater leaf width) can be significantly cooler than $T_{air}$ under low radiation with stomata open [@leighInfluenceLeafSize2017], and significantly hotter under high radiation with stomata closed.  
 
@@ -345,6 +347,10 @@ Leaves with open stomata and high radiation loads maintain $T_{leaf}$ similar to
 1.	Air T
 2.	Solar radiation
 3.	Leaf traits 
+
+In tropical and temperate forests, greater light input in exposed upper canopy leaves has been observed to increase leaf temperatures, sometimes 1-7C above ambient air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@mauTemperateTropicalForest2018a]
+
+
 -  Michaletz et al have done some interesting work on leaf thermoregulation in relation to various leaf traits. I don’t think there is sun vs shade tests, but we could look at how this might translate, or how some of the traits he has calculated might differ between sun and shade leaves. For example, he has this thermal time constant parameter that is calculated from leaf mass per area, leaf dry matter content, and some environmental parameters. E.g.: DOI: 10.1038/nplants.2016.129, http://dx.doi.org/10.1016/j.tree.2015.09.006
 
 **When vertical gradients in the biophysical environment and leaf traits combine to shape leaf energy budgets, under some conditions $T_{leaf}$ tracks  $T_{air}$ and therefore differs little between understory and canopy (Fig. **2?**).**
