--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -102,7 +102,7 @@ In the meantime, our findings imply that while large canopy trees are the most v
 ## Introduction
 
 Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC REF). 
-There is also increasing severity and frequency of heat waves that will potentially reduce [forest] biomass acculumation and disrupt photosynthesis and metabolic processes across plant species [O'Sullivan;REF ;@perkinsIncreasingFrequencyIntensity2012].
+There is also increasing severity and frequency of heat waves that will potentially reduce [forest] biomass acculumation, and disrupt photosynthesis and metabolic processes across plant species [Sullivan et al. 2020, @perkinsIncreasingFrequencyIntensity2012].
 These changes are expected to have profound effects on forest biodiversity and ecosystem function (REFS), and the resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future of trajectory of climate change [@bonan_ecological_2016, Bonan 2008].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davis_microclimatic_2019].**
@@ -110,13 +110,15 @@ These changes are expected to have profound effects on forest biodiversity and e
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and Co2 which influences leaf traits, thermoregulation and metabolism along the gradient, and with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
 
 The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions [@senfCanopyMortalityHas2018a].
-Increasing temperature has profound impacts on canopy cover, such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts, causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to increased sensitivity of overstory to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020].Larger trees suffer hydraulic stress during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to increase [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continuous evapotranspiration, thereby buffering understory microclimates [REF].  
+Increasing global temperatures can increase canopy leaf temperatures sometimes above ambient temperature when transpiration is low, leading to temperate and tropical forest canopies functioning beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Conversly, available water facilitates leaf transpiration through open stomata, however increased relative humdity in tropical regions indirectly caused by increased temperature, reduces transpiration leading to high leaf temperatures in the canopy [Tibbitts 1979; Perez and Feeley 2018].  
+
+Frequent droughts related hydraulic limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to sensitivity of overstory to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. Larger trees suffer hydraulic stress during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to increase [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of soil water enables canopies with suitable foliar traits to remain cool through continuous evapotranspiration even during increasing air temperature, thereby buffering understory microclimates [REF].
 
 While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020]. Understories experience a distinct set of pressures as microclimatic warming combines with conditions of limited light and related foliar traits, inter-species resource competition, and herbivory [@niinemetsResponsesForestTrees2010a; @bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and performance, even around 1 degree of warming can lead to changes in plant species composition and growth [@bertrandChangesPlantCommunity2011; @bertrandCommentForestMicroclimate2020]. Plant communities in forest microclimates are already undergoing thermophilization [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. In addition, understory growth phenology is sensitive to warming year round, and especially in spring [Zohnner_Renner 2019]. 
 
 Microclimate warming has implications for forest regeneration [@vonarxSpatiotemporalEffectsForest2012a]. Temperature driven photosynthesis limitation is reducing tree growth rates, accompanying a global trend towards disturbed forests with younger trees [@mcdowellPervasiveShiftsForest2020]. Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
 
-While there is evidence for temperature driven shifts in forest dynamics, leaf-level metabolic and performance changes influenced by biophysical conditions and warming in overstory and understory is still unclear. Thus, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy. This will provide a pathway for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions with additional feedbacks to forest structure and microclimates.
+While there is evidence for temperature driven shifts in forest dynamics, leaf-level metabolic and performance changes influenced by biophysical conditions and warming in the overstory and understory is still unclear. Thus, it is becoming important to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy. This will provide a pathway for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions with additional feedbacks to forest structure and microclimates.
 
 
 (@niinemetsWithincanopyVariationRate2004a highlights how biophysical and photosynthetic gradient varies along the vertical canopy profile, however our current knowledge of this topic is lacking.)
@@ -244,7 +246,7 @@ However vertical climate gradients within forests are known to be steeper than t
 ## Trait variation 
 
 
-Leaf traits are shaped by light and height and show different degrees of intraspecific foliar plasticity in accordance with the intensity and availability of light, optimizing water uptake, hea, C uptake and metabolism by leaves across forest vertical strata [Rosendaal et al. 2006]. After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody and herbaceous species [Keenan and Niinemets et al.2016; @niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR, and the ratio of red to far red radiation [R:FR] intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [Casal, 2013]. As a result, degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006], which ultimately also influences leaf structural, chemical and physiological traits as well [Keenan and Niinemets et al. 2016]. 
+Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016] and show different degrees of intraspecific foliar plasticity in accordance with the intensity and availability of light, optimizing water uptake, heat, C uptake and metabolism across forest vertical strata [Rosendaal et al. 2006]. After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody and herbaceous species [Keenan and Niinemets et al.2016; @niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR, and the ratio of red to far red radiation [R:FR] intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [Casal, 2013]. As a result, degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006], which ultimately also influences leaf structural, chemical and physiological traits as well [Keenan and Niinemets et al. 2016]. 
 
 (Elsa: it may also be worth mentioning leaf turnover / leaf longevity briefly in the above paragraph in the context of leaf development and trait formation.)
 
@@ -257,7 +259,6 @@ Additionally, shade leaves in the understory can be broken into three categories
 
 **Inter-species vertical gradient leaf trait variation**
 
-Leaf traits (functional and physiological) co-vary with their environment to maintain optimum temperature for metabolic processes under various environmental circumstances [@michaletzEnergeticCarbonEconomic2016].
 Taller trees in dense forests tend to be exposed to greater irradiance but maintain shaded leaves in canopy interior and lower canopy compared to shorter understory trees that are shaded by overstory. As a result, the sun and shade leaf trait dichotomy has been established across species by various studies where typical sun leaves are often smaller in size and width, thicker, hairier, with thicker cuticle and greater lobation than shade leaves
 [Rozendaal et al. 2006, Mathur et al. 2018, more REFS]. 
 
@@ -302,10 +303,8 @@ Height is more important than light in determining leaf morphology in a tropical
 *Leaf area / characteristic dimension*:
 - Recent paper on influence on leaf size/shape in PCE – certain aspects of leaf shape were not as relevant as expected (Leigh et al. 2017? https://onlinelibrary.wiley.com/doi/full/10.1111/pce.12857)
 
-Leaf temperature is generally associated to increase with leaf area ($LA$) [ Wright et al. 2019]. However, thermal imagery shows that though leaf area can be a predictor for leaf temperatures ranges [$Trange$] across the surface of the leaf, effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant [@leighInfluenceLeafSize2017]. With increase in efffective leaf width, boundary layer thickness and resistance increases along with stomtal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018].This lowers evaporation from stomatal pores, and in turn traspirational cooling in large leaves [@fauset_differences_2018]. Because the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, small leaves are able to dissapate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Using leaf energy balance to compare leaf temperatures of two species $Miconia$ and $Alchornea$, Fauset et al. 2016 found leaf width to be a dominant factor in deterimining changes in leaf temperature, which was evidently greater for large width leaves of $Miconia$ compared to $Alchornea$. Leaf width and characteristic dimension is generally greater in shaded understory leaves along the vertical gradient than exposed upper canopy [ref]. Additionally, leaf characteristics such as lobes, leaf elongation and serration break the entirity of leaf dimension by enhancing a smaller characteristic dimension, all facilitate in dissapating heat more efficiently. Leaf lobes are deeper in exposed canopy than in shaded understory, as well as leaf elongation and serration are more pronounced in sun exposed canopies [Vogel 1970; Roth-Nebelsick 2001;Schuepp 1993; Sack et al. 2006]. 
+Leaf temperature is generally associated to increase with leaf area ($LA$) [ Wright et al. 2019]. Thermal imagery shows that though leaf area can be a predictor for leaf temperatures ranges [$Trange$] across the surface of the leaf, effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant [@leighInfluenceLeafSize2017]. With increase in efffective leaf width, boundary layer thickness and resistance increases along with stomtal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018].This lowers evaporation from stomatal pores, and in turn traspirational cooling in large leaves [@fauset_differences_2018]. Because the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, small leaves are able to dissapate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Using leaf energy balance to compare leaf temperatures of two species $Miconia$ and $Alchornea$, Fauset et al. 2016 found leaf width to be a dominant factor in deterimining changes in leaf temperature, which was evidently greater for large width leaves of $Miconia$ compared to $Alchornea$. Leaf width and characteristic dimension is generally greater in shaded leaves along the vertical gradient than exposed upper canopy [ref]. Additionally, leaf characteristics such as lobes, leaf elongation and serration break the entirity of leaf dimension by enhancing a smaller characteristic dimension, all facilitate in dissapating heat more efficiently. Leaf lobes are deeper in exposed canopy than in shaded understory, as well as leaf elongation and serration are more pronounced in sun exposed canopies [Vogel 1970; Roth-Nebelsick 2001;Schuepp 1993; Sack et al. 2006].However, Perez and Feeley et al. 2020 showed only a slight negetive effect on leaf temperature with leaf width. 
 
-- Max stomatal conductance - increases with canopy height (Kenzo et al. 2015)
-Max transpiration rate - increases with canopy height (Kenzo et al. 2015).
 
 *Thermal time constant (probably not a lot out there)*
 -	Curtis et. al, 2018 – higher in more exposed leaves (heat up slower, cool slower)
@@ -334,7 +333,7 @@ High light stimulates the need for photoprotection in leaves in order to protect
 
 **Many of the biophysical and trait variable reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
 $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. 3).
-Leaf traits are regulated to varying biophysical environment in order to maintain metabolic optima so that the amount of carbon assimilated by a leaf throughout its life span is greater than the total carbon invested in the leaf [@michaletzPlantThermoregulationEnergetics2015] 
+Leaf traits are influenced by biophysical environment in order to maintain metabolic optima so that the amount of carbon assimilated by a leaf throughout its life span is greater than the total carbon invested in the leaf, and thus leaf temperatures are decoupled from air temperature through adaptive physiological traits [@michaletzPlantThermoregulationEnergetics2015; Perez et al. 2020] 
 $T_{leaf}$  is largely a function of radiation input versus heat lost to the environment, and typically increases [with tree height] as light availability increases [@michaletzPlantThermoregulationEnergetics2015]. 
 
 In addition, leaf size impacts leaf temperature. While small leaves remain within a few degrees of $T_{air}$, regardless of stomatal conductance, wider leaves can have temperatures deviating more from air temperature [@fauset_differences_2018]. Large leaves (with greater leaf width) can be significantly cooler than $T_{air}$ under low radiation with stomata open [@leighInfluenceLeafSize2017], and significantly hotter under high radiation with stomata closed.  
@@ -348,14 +347,17 @@ Leaves with open stomata and high radiation loads maintain $T_{leaf}$ similar to
 2.	Solar radiation
 3.	Leaf traits 
 
-In tropical and temperate forests, greater light input in exposed upper canopy leaves has been observed to increase leaf temperatures, sometimes 1-7C above ambient air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@mauTemperateTropicalForest2018a]
 
+In a tropical forest of Puerto Rico and temperate forests in Michigan, greater light input in exposed upper canopy leaves has been observed to increase leaf temperatures, sometimes 1-7C above ambient air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@mauTemperateTropicalForest2018a] 
 
 -  Michaletz et al have done some interesting work on leaf thermoregulation in relation to various leaf traits. I don’t think there is sun vs shade tests, but we could look at how this might translate, or how some of the traits he has calculated might differ between sun and shade leaves. For example, he has this thermal time constant parameter that is calculated from leaf mass per area, leaf dry matter content, and some environmental parameters. E.g.: DOI: 10.1038/nplants.2016.129, http://dx.doi.org/10.1016/j.tree.2015.09.006
 
 **When vertical gradients in the biophysical environment and leaf traits combine to shape leaf energy budgets, under some conditions $T_{leaf}$ tracks  $T_{air}$ and therefore differs little between understory and canopy (Fig. **2?**).**
-In a broadleaf deciduous forest, nighttime $T_{leaf}$'s were similar in the canopy and understory	(Bolstad et al. 1999).Air temperature is not always a proxy for measuring leaf temperature [@michaletzPlantThermoregulationEnergetics2015]. 
+[Air temperature is not always a proxy for measuring leaf temperature [@michaletzPlantThermoregulationEnergetics2015].]
+In a broadleaf deciduous forest, nighttime $T_{leaf}$'s were similar in the canopy and understory	(Bolstad et al. 1999). 
 Similarly, during the dry season in a tropical moist forest in Panama... (Rey-Sánchez et al. 2016).
+
+
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.**
 -Large leaf to air temperature differences and high leaf temperatures were found in upper canopy of Atlantic, Brazil Forests despite much lower air temperature due to high solar radiation loads. However, leaf temperatures themselves were moderated by air temperature. [@fauset_differences_2018].
 -	(Slot et al. 2019) and refs therein
@@ -387,6 +389,8 @@ nocite: |
 *Stomatal conductance*
 Photosynthesis can be largely constrained by stomatal conductance. 
 -"Sun exposed outer canopy leaves in tropical trees can experience temperatures up 48 C during diurnal cycle, midday stomtal closure reduces transpitrational cooling" thus elevating leaf temperature greater than air temperature (Slot et al. 2019)
+- Max stomatal conductance - increases with canopy height (Kenzo et al. 2015)
+Max transpiration rate - increases with canopy height (Kenzo et al. 2015).
 
 *Photosynthesis*
 
@@ -410,14 +414,20 @@ Typical values ~45-50$^\circ$C, varying somewhat
 across latitude/climate (O’sullivan et al. 2017),
 with elevation [@feeley_thermal_2020;  Slot unpublished data],
 with leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012].
-- Elsa: also see: 
-- Perez, T.M. and Feeley, K.J., 2020. Photosynthetic heat tolerances and extreme leaf temperatures. Functional Ecology, 34(11), pp.2236-2245.
-- Perez, T.M. and Feeley, K.J., 2020. Weak phylogenetic and climatic signals in plant heat tolerance. Journal of Biogeography.
+Contrary to O'Sullivan et al. 2017's findings, Perez and Feeley et al. 2020 found that across inter-species sun leaves, higher photosynthetic heat tolerance in leaves lead to hotter leaf temperatures and narrower thermal safety margins and thus may be at a greater risk of thermal damage.  
+[- Elsa: also see: 
+- Perez, T.M. and Feeley, K.J., 2020. Weak phylogenetic and climatic signals in plant heat tolerance. Journal of Biogeography.]
+
+Supporting the significant negetive relationship between $T50$ and thermal safety margins, photosynthesis [PS2] temperature regulation has been associated leaf thermal tolerance in order to maximize net carbon assimilation. However, randomly collected within-canopy leaves of individual mature plants in Florida showed that Tmax is not directly coordinated with high PS2 heat tolerance and does not necessarily increase leaf thermal tolerance [shows no direct correlation]; nor increases carbon assimilation at higher temperature. Rather, high PS2 heat tolerance reduces optimum temperature for C assimilation [$Topt$] because high PS2 heat tolerance requires a greater cost of PS2 metabolic activity maintainance thus not contributing to increased C assimilation. Species exhibiting low carbon assimilation rate tended to have greater stress tolerance. In addition, species with low stomtal conductance exhibit greater PS2 heat tolerance because earlier closure of stomata ceases C assimaltion before thermal limits are reached [Perez et al. 2020]
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 For two of three species studied in a tropical moist forest in Panama, $T_{50}$ was slightly lower for shade than sun-exposed leaves, both measured near ground level (Slot et al. 2019). 
 Similarly, for *Acacia Papyrocarpa* (Benth.) trees in an arid region of southern Australia, higher $T_{50}$ was observed in more exposed (North-facing) canopy positions (Curtis et al. 2019). 
 We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot
+
+increased irradiance = increased VPD = increased air temp = midday stomatal closure =  decreased latent heat loss = increase leaf temperature = decreased C assimilation = greater PS2 heat tolerance = optimum rate of photosynthesis decreases = exhibiting lower t opt (optimum temp for c assimilation)
+
+incr.humidity = decreased VPD = dec. latent heat loss = limited c assimilation [Perez et al. 2020] 
 
 *Respiration*
 
