--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3600,7 +3600,7 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\BPMNUW8V\\newphytologist.198.1.html}
 }
 
-@data{OptimalStomatalBehaviour2015,
+@dataset{OptimalStomatalBehaviour2015,
   title = {Optimal Stomatal Behaviour around the World},
   date = {2015-02-09},
   publisher = {{figshare}},
@@ -3824,6 +3824,55 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\J56R4F5K\\Pérez-Estrada et al. - 2000 - Variation in leaf trichomes of Wigandia urens env.pdf},
   langid = {english},
   number = {9}
+}
+
+@article{perezIncreasingHumidityThreatens2018,
+  title = {Increasing {{Humidity Threatens Tropical Rainforests}}},
+  author = {Perez, Timothy M. and Feeley, Kenneth J.},
+  date = {2018-06-05},
+  journaltitle = {Front. Ecol. Evol.},
+  volume = {6},
+  pages = {68},
+  issn = {2296-701X},
+  doi = {10.3389/fevo.2018.00068},
+  url = {https://www.frontiersin.org/article/10.3389/fevo.2018.00068/full},
+  urldate = {2021-01-15},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\2WMEG9DZ\\Perez and Feeley - 2018 - Increasing Humidity Threatens Tropical Rainforests.pdf},
+  langid = {english}
+}
+
+@article{perezPhotosyntheticHeatTolerances2020,
+  title = {Photosynthetic Heat Tolerances and Extreme Leaf Temperatures},
+  author = {Perez, Timothy M. and Feeley, Kenneth J.},
+  date = {2020},
+  journaltitle = {Functional Ecology},
+  volume = {34},
+  pages = {2236--2245},
+  issn = {1365-2435},
+  doi = {10.1111/1365-2435.13658},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/1365-2435.13658},
+  urldate = {2021-01-15},
+  abstract = {Photosynthetic heat tolerances (PHTs) have several potential applications including predicting which species will be most vulnerable to climate change. Given that plants exhibit unique thermoregulatory traits that influence leaf temperatures and decouple them from ambient air temperatures, we hypothesized that PHTs should be correlated with extreme leaf temperatures as opposed to air temperatures. We measured leaf thermoregulatory traits, maximum leaf temperatures (TMO) and two metrics of PHT (Tcrit and T50) quantified using the quantum yield of photosystem II for 19 plant species growing in Fairchild Tropical Botanic Garden (Coral Gables, FL, USA). Thermoregulatory traits measured at the Garden and microenvironmental variables were used to parameterize a leaf energy balance model that estimated maximum in situ leaf temperatures (TMIS) across the geographic distributions of 13 species. TMO and TMIS were positively correlated with T50 but were not correlated with Tcrit. The breadth of species' thermal safety margins (the difference between T50 and TMO) was negatively correlated with T50. Our results provide observational and theoretical support based on a first principles approach for the hypothesis that PHTs may be adaptations to extreme leaf temperature, but refute the assumption that species with higher PHTs are less susceptible to thermal damage. Our study also introduces a novel method for studying plant ecophysiology by incorporating biophysical and species distribution models, and highlights how the use of air temperature versus leaf temperature can lead to conflicting conclusions about species vulnerability to thermal damage. A free Plain Language Summary can be found within the Supporting Information of this article.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/1365-2435.13658},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\PUEKGY3E\\Perez and Feeley - 2020 - Photosynthetic heat tolerances and extreme leaf te.pdf;C\:\\Users\\Me\\Zotero\\storage\\Q9V2CCHU\\1365-2435.html},
+  keywords = {adaptation,climate change,energy balance,microclimate,quantum yield},
+  langid = {english},
+  number = {11}
+}
+
+@article{perezPSIIHeatTolerances2020,
+  title = {{{{\textsc{PSII}}}} Heat Tolerances Characterize Thermal Generalists and the Upper Limit of Carbon Assimilation},
+  author = {Perez, Timothy M. and Socha, Annika and Tserej, Olga and Feeley, Kenneth J.},
+  date = {2020-12-30},
+  journaltitle = {Plant Cell Environ},
+  pages = {pce.13990},
+  issn = {0140-7791, 1365-3040},
+  doi = {10.1111/pce.13990},
+  url = {https://onlinelibrary.wiley.com/doi/10.1111/pce.13990},
+  urldate = {2021-01-15},
+  abstract = {The heat tolerance of photosystem II (PSII) may promote carbon assimilation at higher temperatures and help explain plant responses to climate change. Higher PSII heat tolerance could lead to (a) increases in the high-temperature compensation point (Tmax); (b) increases in the thermal breadth of photosynthesis (i.e. the photosynthetic parameter Ω) to promote a thermal generalist strategy of carbon assimilation; (c) increases in the optimum rate of carbon assimilation Popt and faster carbon assimilation and/or (d) increases in the optimum temperature for photosynthesis (Topt). To address these hypotheses, we tested if the Tcrit, T50 and T95 PSII heat tolerances were correlated with carbon assimilation parameters for 21 plant species. Our results did not support Hypothesis 1, but we observed that T50 may be used to estimate the upper thermal limit for Tmax at the species level, and that community mean Tcrit may be useful for approximating Tmax. The T50 and T95 heat tolerance metrics were positively correlated with Ω in support of Hypothesis 2. We found no support for Hypotheses 3 or 4. Our study shows that high PSII heat tolerance is unlikely to improve carbon assimilation at higher temperatures but may characterize thermal generalists with slow resource acquisition strategies.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\USNLMRIJ\\Perez et al. - 2020 - PSII.pdf},
+  langid = {english}
 }
 
 @article{perkinsIncreasingFrequencyIntensity2012,
@@ -5015,6 +5064,26 @@
   doi = {10.1038/s41558-018-0231-9},
   abstract = {Protecting biodiversity against the impacts of climate change requires effective conservation strategies that safeguard species at risk of extinction¹. Microrefugia allowed populations to survive adverse climatic conditions in the past2,3, but their potential to reduce extinction risk from anthropogenic warming is poorly understood3–5, hindering our capacity to develop robust in situ measures to adapt conservation to climate change⁶. Here, we show that microclimatic heterogeneity has strongly buffered species against regional extirpations linked to recent climate change. Using more than five million distribution records for 430 climate-threatened and range-declining species, population losses across England are found to be reduced in areas where topography generated greater variation in the microclimate. The buffering effect of topographic microclimates was strongest for those species adversely affected by warming and in areas that experienced the highest levels of warming: in such conditions, extirpation risk was reduced by 22\% for plants and by 9\% for insects. Our results indicate the critical role of topographic variation in creating microrefugia, and provide empirical evidence that microclimatic heterogeneity can substantially reduce extinction risk from climate change.},
   file = {C\:\\Users\\Me\\Zotero\\storage\\5J439Q8W\\Suggitt et al. - 2018 - Extinction risk from climate change is reduced by .pdf}
+}
+
+@article{sullivanLongtermThermalSensitivity2020,
+  title = {Long-Term Thermal Sensitivity of {{Earth}}’s Tropical Forests},
+  author = {Sullivan, Martin J. P. and Lewis, Simon L. and Affum-Baffoe, Kofi and Castilho, Carolina and Costa, Flávia and Sanchez, Aida Cuni and Ewango, Corneille E. N. and Hubau, Wannes and Marimon, Beatriz and Monteagudo-Mendoza, Abel and Qie, Lan and Sonké, Bonaventure and Martinez, Rodolfo Vasquez and Baker, Timothy R. and Brienen, Roel J. W. and Feldpausch, Ted R. and Galbraith, David and Gloor, Manuel and Malhi, Yadvinder and Aiba, Shin-Ichiro and Alexiades, Miguel N. and Almeida, Everton C. and de Oliveira, Edmar Almeida and Dávila, Esteban Álvarez and Loayza, Patricia Alvarez and Andrade, Ana and Vieira, Simone Aparecida and Aragão, Luiz E. O. C. and Araujo-Murakami, Alejandro and Arets, Eric J. M. M. and Arroyo, Luzmila and Ashton, Peter and C, Gerardo Aymard and Baccaro, Fabrício B. and Banin, Lindsay F. and Baraloto, Christopher and Camargo, Plínio Barbosa and Barlow, Jos and Barroso, Jorcely and Bastin, Jean-François and Batterman, Sarah A. and Beeckman, Hans and Begne, Serge K. and Bennett, Amy C. and Berenguer, Erika and Berry, Nicholas and Blanc, Lilian and Boeckx, Pascal and Bogaert, Jan and Bonal, Damien and Bongers, Frans and Bradford, Matt and Brearley, Francis Q. and Brncic, Terry and Brown, Foster and Burban, Benoit and Camargo, José Luís and Castro, Wendeson and Céron, Carlos and Ribeiro, Sabina Cerruto and Moscoso, Victor Chama and Chave, Jerôme and Chezeaux, Eric and Clark, Connie J. and de Souza, Fernanda Coelho and Collins, Murray and Comiskey, James A. and Valverde, Fernando Cornejo and Medina, Massiel Corrales and da Costa, Lola and Dančák, Martin and Dargie, Greta C. and Davies, Stuart and Cardozo, Nallaret Davila and de Haulleville, Thales and de Medeiros, Marcelo Brilhante and Pasquel, Jhon del Aguila and Derroire, Géraldine and Fiore, Anthony Di and Doucet, Jean-Louis and Dourdain, Aurélie and Droissart, Vincent and Duque, Luisa Fernanda and Ekoungoulou, Romeo and Elias, Fernando and Erwin, Terry and Esquivel-Muelbert, Adriane and Fauset, Sophie and Ferreira, Joice and Llampazo, Gerardo Flores and Foli, Ernest and Ford, Andrew and Gilpin, Martin and Hall, Jefferson S. and Hamer, Keith C. and Hamilton, Alan C. and Harris, David J. and Hart, Terese B. and Hédl, Radim and Herault, Bruno and Herrera, Rafael and Higuchi, Niro and Hladik, Annette and Coronado, Eurídice Honorio and Huamantupa-Chuquimaco, Isau and Huasco, Walter Huaraca and Jeffery, Kathryn J. and Jimenez-Rojas, Eliana and Kalamandeen, Michelle and Djuikouo, Marie Noël Kamdem and Kearsley, Elizabeth and Umetsu, Ricardo Keichi and Kho, Lip Khoon and Killeen, Timothy and Kitayama, Kanehiro and Klitgaard, Bente and Koch, Alexander and Labrière, Nicolas and Laurance, William and Laurance, Susan and Leal, Miguel E. and Levesley, Aurora and Lima, Adriano J. N. and Lisingo, Janvier and Lopes, Aline P. and Lopez-Gonzalez, Gabriela and Lovejoy, Tom and Lovett, Jon C. and Lowe, Richard and Magnusson, William E. and Malumbres-Olarte, Jagoba and Manzatto, Ângelo Gilberto and Marimon, Ben Hur and Marshall, Andrew R. and Marthews, Toby and Reis, Simone Matias de Almeida and Maycock, Colin and Melgaço, Karina and Mendoza, Casimiro and Metali, Faizah and Mihindou, Vianet and Milliken, William and Mitchard, Edward T. A. and Morandi, Paulo S. and Mossman, Hannah L. and Nagy, Laszlo and Nascimento, Henrique and Neill, David and Nilus, Reuben and Vargas, Percy Núñez and Palacios, Walter and Camacho, Nadir Pallqui and Peacock, Julie and Pendry, Colin and Mora, Maria Cristina Peñuela and Pickavance, Georgia C. and Pipoly, John and Pitman, Nigel and Playfair, Maureen and Poorter, Lourens and Poulsen, John R. and Poulsen, Axel Dalberg and Preziosi, Richard and Prieto, Adriana and Primack, Richard B. and Ramírez-Angulo, Hirma and Reitsma, Jan and Réjou-Méchain, Maxime and Correa, Zorayda Restrepo and de Sousa, Thaiane Rodrigues and Bayona, Lily Rodriguez and Roopsind, Anand and Rudas, Agustín and Rutishauser, Ervan and Salim, Kamariah Abu and Salomão, Rafael P. and Schietti, Juliana and Sheil, Douglas and Silva, Richarlly C. and Espejo, Javier Silva and Valeria, Camila Silva and Silveira, Marcos and Simo-Droissart, Murielle and Simon, Marcelo Fragomeni and Singh, James and Shareva, Yahn Carlos Soto and Stahl, Clement and Stropp, Juliana and Sukri, Rahayu and Sunderland, Terry and Svátek, Martin and Swaine, Michael D. and Swamy, Varun and Taedoumg, Hermann and Talbot, Joey and Taplin, James and Taylor, David and ter Steege, Hans and Terborgh, John and Thomas, Raquel and Thomas, Sean C. and Torres-Lezama, Armando and Umunay, Peter and Gamarra, Luis Valenzuela and van der Heijden, Geertje and van der Hout, Peter and van der Meer, Peter and van Nieuwstadt, Mark and Verbeeck, Hans and Vernimmen, Ronald and Vicentini, Alberto and Vieira, Ima Célia Guimarães and Torre, Emilio Vilanova and Vleminckx, Jason and Vos, Vincent and Wang, Ophelia and White, Lee J. T. and Willcock, Simon and Woods, John T. and Wortel, Verginia and Young, Kenneth and Zagt, Roderick and Zemagho, Lise and Zuidema, Pieter A. and Zwerts, Joeri A. and Phillips, Oliver L.},
+  date = {2020-05-22},
+  journaltitle = {Science},
+  volume = {368},
+  pages = {869--874},
+  publisher = {{American Association for the Advancement of Science}},
+  issn = {0036-8075, 1095-9203},
+  doi = {10.1126/science.aaw7578},
+  url = {https://science.sciencemag.org/content/368/6493/869},
+  urldate = {2021-01-15},
+  abstract = {Thermal sensitivity of tropical trees A key uncertainty in climate change models is the thermal sensitivity of tropical forests and how this value might influence carbon fluxes. Sullivan et al. measured carbon stocks and fluxes in permanent forest plots distributed globally. This synthesis of plot networks across climatic and biogeographic gradients shows that forest thermal sensitivity is dominated by high daytime temperatures. This extreme condition depresses growth rates and shortens the time that carbon resides in the ecosystem by killing trees under hot, dry conditions. The effect of temperature is worse above 32°C, and a greater magnitude of climate change thus risks greater loss of tropical forest carbon stocks. Nevertheless, forest carbon stocks are likely to remain higher under moderate climate change if they are protected from direct impacts such as clearance, logging, or fires. Science, this issue p. 869 The sensitivity of tropical forest carbon to climate is a key uncertainty in predicting global climate change. Although short-term drying and warming are known to affect forests, it is unknown if such effects translate into long-term responses. Here, we analyze 590 permanent plots measured across the tropics to derive the equilibrium climate controls on forest carbon. Maximum temperature is the most important predictor of aboveground biomass (−9.1 megagrams of carbon per hectare per degree Celsius), primarily by reducing woody productivity, and has a greater impact per °C in the hottest forests ({$>$}32.2°C). Our results nevertheless reveal greater thermal resilience than observations of short-term variation imply. To realize the long-term climate adaptation potential of tropical forests requires both protecting them and stabilizing Earth’s climate. Biome-wide variation in tropical forest carbon stocks and dynamics shows long-term resilience to increasing high temperatures. Biome-wide variation in tropical forest carbon stocks and dynamics shows long-term resilience to increasing high temperatures.},
+  eprint = {32439789},
+  eprinttype = {pmid},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\JS364NH4\\Sullivan et al. - 2020 - Long-term thermal sensitivity of Earth’s tropical .pdf},
+  langid = {english},
+  number = {6493}
 }
 
 @online{SunShadeLeaves,
